content/v1.3.0/zh/api/gui/WidgetAttributeKeyType.md
---
title: "WidgetAttributeKeyType"
---
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `WidgetAttributeKeyType`
- [← 本领域 / 返回 gui](./)
- [↑ API 目录](../)
- [🏠 首页 v1.3.0](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# WidgetAttributeKeyType

**Namespace:** TaleWorlds.GauntletUI.PrefabSystem
**Module:** TaleWorlds.GauntletUI
**Type:** `public abstract class WidgetAttributeKeyType`
**Base:** 无
**File:** `TaleWorlds.GauntletUI.PrefabSystem/WidgetAttributeKeyType.cs`

## 概述

`WidgetAttributeKeyType` 位于 `TaleWorlds.GauntletUI.PrefabSystem`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.GauntletUI.PrefabSystem` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### CheckKeyType
`public abstract bool CheckKeyType(string key)`

**用途 / Purpose:** 处理 `check key type` 相关逻辑。

### GetKeyName
`public abstract string GetKeyName(string key)`

**用途 / Purpose:** 获取 `key name` 的当前值。

### GetSerializedKey
`public abstract string GetSerializedKey(string key)`

**用途 / Purpose:** 获取 `serialized key` 的当前值。

## 使用示例

```csharp
var implementation = new CustomWidgetAttributeKeyType();
```

## 参见

- [完整类目录](../catalog)